﻿7/21/2014 0.1.3a
    Various bug fixes.
    Code comments and cleanup
    
7/20/2014 0.1.2a
    Essentia Providers now take on the color of the cable they are placed against.
    Essentia Providers will take on the color of the first cable it finds if there are not matching cables with its color.
    Bugfix: Incorrect lighting on essentia providers.
    Rotated provider textures for a more seamless look.
    Various code cleanups.

7/19/2014 0.1.1a
    Created block for Essentia Provider.
    Implemented Thaumcraft part of essentia provider functionality.
    Implemented AppEng part of essentia provider functionality.
    Removed unused tickable interface from essentia terminal.
    BugFix: Potential issue in essentia<->fluid conversion handler when input list was null.
    Various name refactors.
    BugFix: All parts, trying to use the world before it existed.
    BugFix: Storage bus did not update when phial was used to deposit essentia in empty neighboring jar.
    BugFix: Terminal plays sound each time it is opened, if an item was left in the output slot
    Added custom renderer and overlay texture for essentia provider.
    
7/18/2014 0.1.0a
    Initial github commit.